dist/1.0/bin/sample/retrieveUnpackaged/objects/PricingItem__c.object
<CustomObject>
    <fields>
        <fullName>Align_to_Billing_Cycle__c</fullName>
        <description>Indicates if Pricing Item should be aligned to Billing Cycle (sales means it will be selected during configuration)</description>
        <inlineHelpText>Indicates if Pricing Item should be aligned to Billing Cycle (sales means it will be selected during configuration)</inlineHelpText>
        <label>Align to Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Related Attribute Set Type</description>
        <inlineHelpText>Related Attribute Set Type</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Pricing Items</relationshipLabel>
        <relationshipName>Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_Number__c</fullName>
        <description>Indicates number of Billing Cycle, to which Pricing Item should be aligned</description>
        <inlineHelpText>Indicates number of Billing Cycle, to which Pricing Item should be aligned</inlineHelpText>
        <label>Billing Cycle Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <description>Cycle in which item is charged in Billing.</description>
        <inlineHelpText>Cycle in which item is charged in Billing.</inlineHelpText>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>half year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Binding_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bindind Period for the Pricing Item. If Binding Period matches Contract Term the Pricing Item is available in Product Configurator.</description>
        <inlineHelpText>Bindind Period for the Pricing Item. If Binding Period matches Contract Term the Pricing Item is available in Product Configurator.</inlineHelpText>
        <label>Binding Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_to_Synchronize__c</fullName>
        <description>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this pricing item and should be synchronized.</description>
        <inlineHelpText>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this pricing item and should be synchronized.</inlineHelpText>
        <label>Bundle to Synchronize</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_CZE__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (Czech)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_GBR__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (English)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_HUN__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (Hungarian)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_POL__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (Polish)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_ROU__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (Romanian)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_SVK__c</fullName>
        <description>Description displayed in Product Configurator</description>
        <inlineHelpText>Description displayed in Product Configurator</inlineHelpText>
        <label>Description (Slovak)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dimension_Dictionary__c</fullName>
        <label>Dimension Dictionary</label>
        <referenceTo>Dimension_Dictionary__c</referenceTo>
        <relationshipLabel>Pricing Items</relationshipLabel>
        <relationshipName>Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Product__c</fullName>
        <description>Financial Product for this Pricing Item</description>
        <inlineHelpText>Financial Product for this Pricing Item</inlineHelpText>
        <label>Financial Product</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Pricing Items (Financial Product)</relationshipLabel>
        <relationshipName>Pricing_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Products will be marked with multipicklist field GTS Location (GTS Poland, GTS Slovakia etc. ) mainly to separate Products for SK and other countries</description>
        <inlineHelpText>Please choose countires for this product</inlineHelpText>
        <label>GTS_Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>InvoiceDescriptionENG__c</fullName>
        <description>Pricing Item description that is printed on invoice.</description>
        <inlineHelpText>Pricing Item description that is printed on invoice.</inlineHelpText>
        <label>Invoice Description (English)</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceDescriptionSVK__c</fullName>
        <description>Pricing Item description that is printed on invoice.</description>
        <inlineHelpText>Pricing Item description that is printed on invoice.</inlineHelpText>
        <label>Invoice Description (Slovak)</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Description_HU__c</fullName>
        <label>Invoice Description (Hungarian)</label>
        <length>383</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoicingAhead__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of months that should be invoiced ahead</description>
        <inlineHelpText>Number of months that should be invoiced ahead</inlineHelpText>
        <label>Months to Bill Ahead</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoicing_Category__c</fullName>
        <description>Invoicing Category for Billing</description>
        <inlineHelpText>Invoicing Category for Billing</inlineHelpText>
        <label>Invoicing Category</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Pricing Items (Invoicing Category)</relationshipLabel>
        <relationshipName>Pricing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoicing_Name__c</fullName>
        <description>Name, that should be visible on the Invoice</description>
        <inlineHelpText>Name, that should be visible on the Invoice</inlineHelpText>
        <label>Invoicing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_CZE__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Czech)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Eng__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_HUN__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Hungarian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_POL__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Polish)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_ROU__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Romanian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_SVK__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Slovak)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AST__c</fullName>
        <description>Technical field which will remember the last related AST, which should be disconnected in Durian. The field will be automatically clean after succesfull synchronization</description>
        <inlineHelpText>Technical field for synchronization with Billing</inlineHelpText>
        <label>Last AST</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Pricing Items (Last AST)</relationshipLabel>
        <relationshipName>Pricing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaximalDiscount__c</fullName>
        <description>Maximal Discount percentage value that can be entered</description>
        <inlineHelpText>Maximal Discount percentage value that can be entered</inlineHelpText>
        <label>Maximal Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>How this price is billed (in advance, backwards)</description>
        <inlineHelpText>How this price is billed (in advance, backwards)</inlineHelpText>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>in advance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>backwards</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_AST__c</fullName>
        <description>Technical field, which stores the previously assigned AST</description>
        <inlineHelpText>Technical field for synchronization with Billing</inlineHelpText>
        <label>Previous AST</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Item_For_Contract__c</fullName>
        <description>Depending on value selected in this field, Pricing Item will be presented in certain part of printed Contract.</description>
        <inlineHelpText>Depending on value selected in this field, Pricing Item will be presented in certain part of printed Contract.</inlineHelpText>
        <label>Pricing Item For Contract</label>
        <picklist>
            <picklistValues>
                <fullName>TEL_CONF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEL_FEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEL_INS_SALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEL_RENT_FEE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if component will be displayed for Simplified Orders.</description>
        <inlineHelpText>Flag indicating if component will be displayed for Simplified Orders.</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Label__c</fullName>
        <description>Additional field for presenting Labels on PC definition page (VisualForce page RelatePricingItem); not filled;</description>
        <inlineHelpText>Tecnical field; not filled by users;</inlineHelpText>
        <label>Temp Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Pricing Item (One-time Fee, Recurring Fee)</description>
        <inlineHelpText>Type of Pricing Item (One-time Fee, Recurring Fee)</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-time Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IntraCall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal Usage Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Tehcnical field used for validation of name field&apos;s uniqueness.</description>
        <inlineHelpText>Tehcnical field.</inlineHelpText>
        <label>UniqueName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Unit from SK Billing</description>
        <inlineHelpText>Unit from SK Billing</inlineHelpText>
        <label>Unit</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Pricing Items (Unit)</relationshipLabel>
        <relationshipName>Pricing_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Enum__c</fullName>
        <description>Enumerator delivered by DAVO</description>
        <inlineHelpText>VAT assigned by Billing</inlineHelpText>
        <label>VAT</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Pricing Items</relationshipLabel>
        <relationshipName>Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date from which the Pricing Item is considered valid and appears in Product Configurator.</description>
        <inlineHelpText>Date from which the Pricing Item is considered valid and appears in Product Configurator.</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <defaultValue>Today()+365</defaultValue>
        <description>Date until which the Pricing Item is considered valid and appears in Product Configurator</description>
        <inlineHelpText>Date until which the Pricing Item is considered valid and appears in Product Configurator</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Pricing Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoicing_Category__c</columns>
        <columns>Attribute_Set_Type__c</columns>
        <columns>Financial_Product__c</columns>
        <columns>MaximalDiscount__c</columns>
        <columns>VAT_Enum__c</columns>
        <columns>InvoicingAhead__c</columns>
        <columns>Unit__c</columns>
        <columns>Dimension_Dictionary__c</columns>
        <columns>Label_Eng__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HU_Pricing_Items</fullName>
        <columns>NAME</columns>
        <columns>GTS_Location__c</columns>
        <columns>Financial_Product__c</columns>
        <columns>Label_Eng__c</columns>
        <columns>Label_HUN__c</columns>
        <columns>Label_POL__c</columns>
        <columns>Unit__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>VAT_Enum__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Source_Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GTS_Location__c</field>
            <operation>includes</operation>
            <value>GTS Hungary</value>
        </filters>
        <label>HU_Pricing Items</label>
    </listViews>
    <nameField>
        <displayFormat>PRI-{000000000}</displayFormat>
        <label>Pricing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DimensionDictionaryRequirement</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISBLANK(Dimension_Dictionary__c) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Dimension_Dictionary__c</errorDisplayField>
        <errorMessage>Dimension Dictionary is required in the Billing System!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TypeRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT(Type__c)=&apos;&apos; ,TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Pricing Item Type has to be provided</errorMessage>
    </validationRules>
</CustomObject>